--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "description": "Builder Archetype - React Component",
   "repository": {
     "type": "git",
-    "url": "https://github.com/FormidableLabs/builder-react-component.git"
+    "url": "http://gitlab.meixinfinance.com/hao.huang/builder-meixin-component.git"
   },
-  "author": "Ryan Roemer <ryan.roemer@formidablelabs.com>",
+  "author": "Hao Huang <hao.huang@meixinfinance.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/FormidableLabs/builder-react-component/issues"
-  },
-  "homepage": "https://github.com/FormidableLabs/builder-react-component",
+  "homepage": "http://gitlab.meixinfinance.com/hao.huang/builder-meixin-component",
   "scripts": {
     "npm:postinstall": "node -e \"require('fs').stat('lib', function(e,s){process.exit(e || !s.isDirectory() ? 1 : 0)})\" || builder run build-lib",
     "npm:preversion": "builder run check",
@@ -57,7 +54,8 @@
     "babel": "^5.8.21",
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
-    "css-loader": "^0.20.1",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.1.1",
     "file-loader": "^0.8.4",
     "rimraf": "^2.4.0",
     "style-loader": "^0.12.4",
