--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "builder:check": "npm run builder:lint"
   },
   "dependencies": {
-    "babel": "^5.8.21",
+    "babel": "^6.1.21",
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
     "node-sass": "^3.4.2",
@@ -60,7 +60,8 @@
     "rimraf": "^2.4.0",
     "style-loader": "^0.12.4",
     "url-loader": "~0.5.5",
-    "webpack": "^1.11.0"
+    "webpack": "^1.12.6",
+    "radium": "^0.15.1"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.3",
