--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.1",
     "file-loader": "^0.8.4",
+    "json-loader": "^0.5.3",
     "rimraf": "^2.4.0",
     "style-loader": "^0.12.4",
     "url-loader": "~0.5.5",
