--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel": "^6.1.18",
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "babel-preset-es2015": "^6.1.18",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.1",
     "file-loader": "^0.8.4",
