--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "babel-preset-es2015": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
+    "babel-plugin-transform-react-constant-elements": "^6.1.18",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.1",
     "file-loader": "^0.8.4",
