added the logic to build by pages

--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "npm:version": "builder run clean && builder run build && git add -A dist",
     "npm:test": "builder run test-frontend",
     "clean-dist": "rimraf dist",
-    "build-dist-min": "webpack --config node_modules/builder-react-component/config/webpack/webpack.config.js --colors",
+    "build-dist-min": "webpack --config node_modules/builder-react-component/config/webpack/webpack.config.pages.js --colors",
     "build-dist-dev": "webpack --config node_modules/builder-react-component/config/webpack/webpack.config.dev.js --colors",
     "build-dist": "builder run clean-dist && builder run build-dist-min && builder run build-dist-dev",
+    "build-dist:pages": "builder run clean-dist && builder run build-dist-min:pages && builder run build-dist-dev",
     "clean-lib": "rimraf lib",
     "build-lib": "builder run clean-lib && babel src -d lib",
     "clean": "builder run clean-lib && builder run clean-dist",
     "build": "builder run build-lib && builder run build-dist",
+    "build:pages": "builder run build-lib && builder run build-dist:pages",
     "server-dev": "webpack-dev-server --port 3000 --config node_modules/builder-react-component/config/webpack/demo/webpack.config.dev.js --colors --content-base demo",
     "server-hot": "webpack-dev-server --port 3000 --config node_modules/builder-react-component/config/webpack/demo/webpack.config.hot.js --colors --hot --content-base demo",
     "server-test": "webpack-dev-server --port 3001 --config node_modules/builder-react-component/config/webpack/webpack.config.test.js --colors",
