--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "npm:version": "builder run clean && builder run build && git add -A dist",
     "npm:test": "builder run test-frontend",
     "clean-dist": "rimraf dist",
-    "build-dist-min": "webpack --config node_modules/builder-react-component/config/webpack/webpack.config.pages.js --colors",
+    "build-dist-min": "webpack --config node_modules/builder-react-component/config/webpack/webpack.config.js --colors",
+    "build-dist-min:pages": "webpack --config node_modules/builder-react-component/config/webpack/webpack.config.pages.js --colors",
     "build-dist-dev": "webpack --config node_modules/builder-react-component/config/webpack/webpack.config.dev.js --colors",
     "build-dist": "builder run clean-dist && builder run build-dist-min && builder run build-dist-dev",
     "build-dist:pages": "builder run clean-dist && builder run build-dist-min:pages && builder run build-dist-dev",
