--- a/package.json
+++ b/package.json
@@ -54,13 +54,11 @@
     "builder:check": "npm run builder:lint"
   },
   "dependencies": {
-    "babel": "^5.8.29",
-    "babel-core": "^5.8.25",
-    "babel-loader": "^5.3.2",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-stage-0": "^6.1.18",
-    "babel-plugin-transform-react-constant-elements": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
+    "babel": "^6.1.18",
+    "babel-core": "6.1.21",
+    "babel-loader": "6.1.0",
+    "babel-preset-es2015": "6.1.18",
+    "babel-preset-react": "6.1.18",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.1",
     "file-loader": "^0.8.4",
