--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "opener": "^1.4.1",
     "phantomjs": "^1.9.18",
     "react-hot-loader": "^1.2.8",
+    "readdir": "0.0.13",
     "sinon": "^1.16.1",
     "webpack-dev-server": "^1.10.0"
   }
