--- a/package.json
+++ b/package.json
@@ -57,18 +57,20 @@
     "babel": "^5.8.29",
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
-    "node-sass": "^3.4.2",
-    "sass-loader": "^3.1.1",
+    "css-loader": "^0.23.0",
     "file-loader": "^0.8.4",
     "json-loader": "^0.5.3",
+    "node-sass": "^3.4.2",
+    "radium": "^0.15.1",
     "rimraf": "^2.4.0",
+    "sass-loader": "^3.1.1",
     "style-loader": "^0.12.4",
     "url-loader": "~0.5.5",
-    "webpack": "^1.12.6",
-    "radium": "^0.15.1"
+    "webpack": "^1.12.6"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.3",
+    "css-loader": "^0.23.0",
     "eslint": "^1.7.3",
     "eslint-config-defaults": "^7.0.1",
     "eslint-plugin-filenames": "^0.1.2",
