--- a/package.json
+++ b/package.json
@@ -54,10 +54,12 @@
     "builder:check": "npm run builder:lint"
   },
   "dependencies": {
+    "autoprefixer-loader": "^3.1.0",
     "babel": "^5.8.29",
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
     "json-loader": "^0.5.3",
     "node-sass": "^3.4.2",
