--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build-lib": "builder run clean-lib && babel src -d lib",
     "clean": "builder run clean-lib && builder run clean-dist",
     "build": "builder run build-lib && builder run build-dist",
-    "build:pages": "builder run build-lib && builder run build-dist:pages",
+    "build:pages": "builder run build-dist:pages",
     "server-dev": "webpack-dev-server --port 3000 --config node_modules/builder-react-component/config/webpack/demo/webpack.config.dev.js --colors --content-base demo",
     "server-hot": "webpack-dev-server --port 3000 --config node_modules/builder-react-component/config/webpack/demo/webpack.config.hot.js --colors --hot --content-base demo",
     "server-test": "webpack-dev-server --port 3001 --config node_modules/builder-react-component/config/webpack/webpack.config.test.js --colors",
