--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "react-hot-loader": "^1.2.8",
     "readdir": "0.0.13",
     "sinon": "^1.16.1",
+    "webpack-bundle-tracker": "0.0.93",
     "webpack-dev-server": "^1.10.0"
   }
 }
