--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "sass-loader": "^3.1.1",
     "style-loader": "^0.12.4",
     "url-loader": "~0.5.5",
-    "webpack": "^1.2.9"
+    "webpack": "^1.2.9",
+    "webpack-bundle-tracker": "0.0.93"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.3",
@@ -98,7 +99,6 @@
     "react-hot-loader": "^1.2.8",
     "readdir": "0.0.13",
     "sinon": "^1.16.1",
-    "webpack-bundle-tracker": "0.0.93",
     "webpack-dev-server": "^1.10.0"
   }
 }
